--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 MarkupSafe==2.0.1
+gunicorn
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
 mistune==0.8.4
